[EAM-3378] Java 21 upgrade